[package]
name = "pencil"
version = "0.2.0"
authors = ["Shipeng Feng <fsp261@gmail.com>"]
keywords = ["web", "framework"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/fengsp/pencil"
homepage = "https://github.com/fengsp/pencil"
documentation = "http://fengsp.github.io/pencil/"
description = "A micro web framework for Rust."

[features]
default = ["ssl"]
ssl = ["hyper/ssl", "formdata/ssl"]

[dependencies]
regex = "0.1.69"
rustc-serialize = "0.3.19"
url = "1.1.0"
log = "0.3.6"
handlebars = "0.16.0"
typemap = "0.3.3"
mime = "0.2.0"
mime_guess = "1.6.1"

[dependencies.hyper]
version = "0.9.4"
default_features = false

[dependencies.formdata]
version = "0.8.2"
default_features = false
features = ["rust-stable"]
