[package]
name = "pencil"
version = "0.3.0"
authors = ["Shipeng Feng <fsp261@gmail.com>"]
keywords = ["web", "framework"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/fengsp/pencil"
homepage = "https://github.com/fengsp/pencil"
documentation = "http://fengsp.github.io/pencil/"
description = "A micro web framework for Rust."

[features]
default = ["ssl"]
ssl = ["hyper/ssl", "formdata/ssl"]

[dependencies]
regex = "0.1.77"
url = "1.2.1"
log = "0.3.6"
handlebars = { version = "0.21", features = ["serde_type"] }
typemap = "0.3.3"
mime = "0.2.2"
mime_guess = "1.8.0"
serde = "0.8"
serde_json = "0.8"

[dependencies.hyper]
version = "0.9.10"
default_features = false

[dependencies.formdata]
version = "0.11.0"
default_features = false
